--- a/air-temps.ipynb
+++ b/air-temps.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "63d4701d-0139-4e2c-8b2f-b0ab253f9ce0",
+   "id": "aef21e2f-5717-4d53-a133-5612f789ab37",
    "metadata": {},
    "source": [
     "# Air Temperatures\n",
+    "\n",
+    "![banner](img/cap_lake.jpg)\n",
     "\n",
     "Below are a series of graphs showing air temperatures at the Vancouver International Airport, and at various sites in the WSA. "
    ]
