--- a/air-temps.ipynb
+++ b/air-temps.ipynb
@@ -1792,29 +1792,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "id": "a270390d-14e5-46ee-8fbd-e04522e43e7d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "year          2013.500000\n",
-       "count_high      37.136364\n",
-       "count_low       56.227273\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
    "source": [
     "#merged_df.head()\n",
     "#df_mean = merged_df.groupby[('year')]('count_high').mean().reset_index()\n",
     "mean_values = merged_df.mean()\n",
-    "mean_values"
+    "#mean_values"
    ]
   },
   {
